--- a/.deepsource/analyzer/analyzer.toml
+++ b/.deepsource/analyzer/analyzer.toml
@@ -1,3 +1,3 @@
-name = "My Analyzer"
+name = "Hackstreet Boys"
 description = "Raise my issues on deepsource"
-command = "make run-analyzer"
+command = "python3 /app/analyzer.py"
