--- a/.deepsource/analyzer/analyzer.toml
+++ b/.deepsource/analyzer/analyzer.toml
@@ -1,3 +1,5 @@
 name = "Hackstreet Boys"
 description = "Raise my issues on deepsource"
-command = "python3 /app/analyze.py"
+analysis_command = "python3 /app/analyze.py"
+category = "language"
+visibility = "public"
